src/test/run-pass/use-crate-name-alias.rs
// Issue #1706
extern mod stdlib(name="std");

fn main() {}
